- default layout changed - index page changed - font name set

--- a/src/assets/styles/variables.scss
+++ b/src/assets/styles/variables.scss
@@ -1,7 +1,7 @@
 @import "fonts";
 @import "colors";
 
-$body-font-family: 'Yekan Bakh', 'Roboto', 'Tahoma', sans-serif!default;
+$body-font-family: 'Vazir', 'Roboto', 'Tahoma', sans-serif!default;
 
 $border-radius-root: 5px;
 
